Developed javascript function calculateWildChill() to dynamically manipulate DOM and displayed weather parameters.

--- a/place.html
+++ b/place.html
@@ -30,22 +30,59 @@
             </picture>
             <section class="data-section">
                 <h2 class="data-heading"><span class="h-span">>>></span>Data</h2>
-                <p class="area-text"><span class="data-items">Area: </span><span id="area-value"> </span></p>
-                <p class="capital-p"><span class="data-items">Capital:</span><span id="capital-city-value"></span></p>
-                <p class="language-p"><span class="data-items">Language:</span><span id="language-value"></span></p>
-                <p class="population-p"><span class="data-items">Population:</span><span id="population-value"></span></p>
-                <p class="time-zone-p"><span class="data-items">Time Zone:</span><span id="time-zone-value"></span></p>
-                <p class="currency-p"><span class="data-items">Currency:</span><span id="currency-value"></span></p>
-                <p class="call-code-p"><span class="data-items">Call Code:</span><span id="call-code-value"></span></p>
-                <p class="internet-p"><span class="data-items">Internet:</span><span id="internet-value"></span></p>
+                <p class="area-text">
+                    <span class="data-items">Area: </span>
+                    <span id="area-value"> </span>
+                </p>
+                <p class="capital-p">
+                    <span class="data-items">Capital:</span>
+                    <span id="capital-city-value"></span>
+                </p>
+                <p class="language-p">
+                    <span class="data-items">Language:</span>
+                    <span id="language-value"></span>
+                </p>
+                <p class="population-p">
+                    <span class="data-items">Population:</span>
+                    <span id="population-value"></span>
+                </p>
+                <p class="time-zone-p">
+                    <span class="data-items">Time Zone:</span>
+                    <span id="time-zone-value"></span>
+                </p>
+                <p class="currency-p">
+                    <span class="data-items">Currency:</span>
+                    <span id="currency-value"></span>
+                </p>
+                <p class="call-code-p">
+                    <span class="data-items">Call Code:</span>
+                    <span id="call-code-value"></span>
+                </p>
+                <p class="internet-p">
+                    <span class="data-items">Internet:</span>
+                    <span id="internet-value"></span>
+                </p>
             </section>
+
             <section class="weather-section">
                 <h2 class="weather-heading"><span class="h-span">>>></span>Weather</h2>
                 <img src="images/brightness-high-fill.svg" alt="bright sun icon">
-                <p class="temp-text"><span class="weather-items">Temperature:</span><span class="temp-value temperature-value"></span></p>
-                <p class="weather-text"><span class="weather-items">Weather Condition:</span><span class="weather-condition-value w-condition-value"></span></p>
-                <p class="wind-text"><span class="weather-items">Wind Speed:</span><span class="wind-speed-value w-speed-value"></span></p>
-                <p class="wind-chill"><span class="weather-items">Wind Chill:</span><span class="wind-chill-value w-chill-value"></span></p>
+                <p class="temp-text">
+                    <span class="weather-items">Temperature:</span>
+                    <span class="temp-value" id="temperature-value"></span>
+                </p>
+                <p class="weather-text">
+                    <span class="weather-items">Weather Condition:</span>
+                    <span class="weather-condition-value" id="w-condition-value"></span>
+                </p>
+                <p class="wind-text">
+                    <span class="weather-items">Wind Speed:</span>
+                    <span class="wind-speed-value" id="w-speed-value"></span>
+                </p>
+                <p class="wind-chill">
+                    <span class="weather-items">Wind Chill:</span>
+                    <span class="wind-chill-value" id="w-chill-value"></span>
+                </p>
             </section>
         </div>
     </main>
