Developed the mobile place-medium.css for mobile view.

--- a/place.html
+++ b/place.html
@@ -6,6 +6,7 @@
     <meta name="discription" content="Country page, Nigeria page">
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
     <link rel="stylesheet" href="styles/place.css">
+    <link rel="stylesheet" href="styles/place-medium.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
@@ -66,7 +67,7 @@
 
             <section class="weather-section">
                 <h2 class="weather-heading"><span class="h-span">>>></span>Weather</h2>
-                <img src="images/brightness-high-fill.svg" alt="bright sun icon">
+                <!--<img src="images/brightness-high-fill.svg" alt="bright sun icon">-->
                 <p class="temp-text">
                     <span class="weather-items">Temperature:</span>
                     <span class="temp-value" id="temperature-value"></span>
