Added cloud-lightning.svg icon, make it to only display in mobile view using css.

--- a/place.html
+++ b/place.html
@@ -67,7 +67,7 @@
 
             <section class="weather-section">
                 <h2 class="weather-heading"><span class="h-span">>>></span>Weather</h2>
-                <!--<img src="images/brightness-high-fill.svg" alt="bright sun icon">-->
+                <img src="images/cloud-lightning.svg" alt="Image of a lightning cloud" id="cloud-image">
                 <p class="temp-text">
                     <span class="weather-items">Temperature:</span>
                     <span class="temp-value" id="temperature-value"></span>
