Removed irrelevant css rule and declaration.

--- a/place.html
+++ b/place.html
@@ -17,10 +17,10 @@
 </head>
 <body>
     <header class="block">
-        <span class="flag-span">
+        <div class="flag-span">
             <img src="images/nigerian_flag_40x32.webp" alt="Small dimension of the Nigerian flag">
             <h1 class="country">Nigeria</h1>
-        </span>
+        </div>
     </header>
     <main>
         <div class="hero">
