--- a/place.html
+++ b/place.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="discription" content="Country page, Nigeria page">
+    <meta name="description" content="Country page, Nigeria page">
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
     <link rel="stylesheet" href="styles/place.css">
     <link rel="stylesheet" href="styles/place-medium.css">
