Completed the html-tables.html file code.

--- a/week04/html-tables.html
+++ b/week04/html-tables.html
@@ -1,12 +1,14 @@
+<!--Develop responsive web pages that follow best practices and use valid HTML and CSS.-->
+
 <table>
-    <caption>Table 1: District 🥝 Sales Data</caption>
     <thead>
         <tr><th colspan="4" scope="colgroup">ACME Widwest servuces</th></tr>
         <tr><th class="block"></th> <th scope="col">Basic</th> <th scope="col">Premium</th> <th scope="col">Delux</th></tr>
     </thead>
     <tbody>
-        <tr><td>Feature 1</td><td>"good"</td> <td></td><td></td></tr>
-        <tr><td>featur e02</td></tr>
-        <tr><td>feature03</td></tr>
+        <tr><td>Feature 1</td><td>✔️</td> <td>✔️</td><td>✔️</td></tr>
+        <tr><td>featur e02</td><td>❌</td><td>✔️</td><td>✔️</td></tr>
+        <tr><td>feature03</td><td>❌</td><td>❌</td><td>✔️</td></tr>
     </tbody>
+    <caption>Table 1: Account Feature Comparison</caption>
 </table>
