Developed the <head> element and its content.

--- a/week04/html-tables.html
+++ b/week04/html-tables.html
@@ -1,4 +1,15 @@
-<!--Develop responsive web pages that follow best practices and use valid HTML and CSS.-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Semantic HTML table">
+    <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
+    <link rel="stylesheet" href="styles/tables.css">
+    <title>Html Table</title>
+</head>
+<body>
+    <!--Develop responsive web pages that follow best practices and use valid HTML and CSS.-->
 
 <table>
     <thead>
@@ -12,3 +23,5 @@
     </tbody>
     <caption>Table 1: Account Feature Comparison</caption>
 </table>
+</body>
+</html>
