completed the javascriptObject.js

--- a/week04/javascriptObject.html
+++ b/week04/javascriptObject.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
     <meta name="description" content="JavaScript Object">
     <link rel="" href="">
-    <script src="" defer></script>
+    <script src="scripts/javascriptObject.js" defer></script>
     <title>JavaScript Object</title>
 </head>
 <body>
