Linked and Developed the JavascriptObject.css file.

--- a/week04/javascriptObject.html
+++ b/week04/javascriptObject.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
     <meta name="description" content="JavaScript Object">
-    <link rel="" href="">
+    <link rel="stylesheet" href="styles/javascriptObject.css">
     <script src="scripts/javascriptObject.js" defer></script>
     <title>JavaScript Object</title>
 </head>
