Developed createTempleCard() funtion to create and add section, h3, p, img element to html page using javascript DOM.

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -33,10 +33,10 @@
             </div>
     </header>
     <!--   =============================  -->
-    <main>
+    <main class="temple-box">
 
-        <h1>Home - Temple</h1>
-        <h2>Below are some temple photos:</h2>
+        <!--<h1>Home - Temple</h1>
+        <h2>Below are some temple photos:</h2>-->
     </main>
 
     <footer>
