Changed some photos to suit others in dimension and added id attribute names to anchor elements.

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -12,18 +12,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Sofia&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Sofia&display=swap" rel="stylesheet">
-    <script src="scripts/temples.js" defer></script>
+    <script src="scripts/filtered-temples.js" defer></script>
     <title>WDD 131 - Temple Album - Odumamwen Henry</title>
 </head>
 <body id="body">
     <header class="header">
             <span class="logo">Temple Album</span>
             <nav class="nav" id="myLinks">
-                <a class="nav_link" href="#">Home</a>
-                <a class="nav_link" href="#">Old</a>
-                <a class="nav_link" href="#">New</a>
-                <a class="nav_link" href="#">Large</a>  
-                <a class="nav_link" href="#">Small</a>                
+                <a class="nav_link" id="home-temples">Home</a>
+                <a class="nav_link" id="old-temples">Old</a>
+                <a class="nav_link" id="new-temples">New</a>
+                <a class="nav_link" id="large-temples">Large</a>  
+                <a class="nav_link" id="small-temples">Small</a>                
             </nav>
             <!--     ================================      -->
             <div class="hamburger">
@@ -32,11 +32,10 @@
                 <div class="hamburger_bar"></div>
             </div>
     </header>
+    <!--<h1>Home - Temple</h1>
+        <h2>Below are some temple photos:</h2>-->
     <!--   =============================  -->
     <main class="temple-box">
-
-        <!--<h1>Home - Temple</h1>
-        <h2>Below are some temple photos:</h2>-->
     </main>
 
     <footer>
