--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="currentyear"></span> &nbsp; 🙋  &nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp; : 🙋 &nbsp;  Nigeria.</p>
+        <p>&copy; <span id="currentyear"></span> &nbsp; 🙋  &nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp; 🙋 &nbsp;  Nigeria.</p>
         <p id="lastModified"></p>
     </footer>
 
