Developed the siteplan.html file.

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -6,6 +6,10 @@
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
     <meta name="description" content="Final project plan, site plan, aluminumRoofCalculator site plan">
     <link rel="stylesheet" href="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <title>Unicon aluminum site plan</title>
 </head>
 <body>
@@ -13,7 +17,7 @@
         <span>Unicon Aluminum Site Plan</span>
     </header>
     <main>
-            <img src="" class="" alt="">
+            <img src="" class="logo" alt="Company Logo">
             <h1 id="heading">Site Name: UNICON ALUMINUM COMPANY</h1>
             <p class="domain">Domain name: <span class="nomain-name">https://engrodus.github.io/wdd131/week06/unicon-aluminum-company.html</span></p>
         <div>
@@ -42,6 +46,8 @@
                     <li> For more sophisticated roof designs, please provide the dimensions of the design/shapes of the roof.</li>
                 </ul>
             </section>
+        </div>
+        <div>
             <section>
                 <h2>Color Schema:</h2>
                 <ol>
@@ -82,13 +88,30 @@
             </section>
             <section>
                 <h2>Typography:</h2>
-                <p></p>
+                <ul>
+                    
+                    <li>
+                        Lato for Heading.
+                    </li>
+                    <li>
+                        Roboto for Body.
+                    </li>
+                    <li>
+                        Alegreya for buttons and special words.
+                    </li>
+                    
+                </ul>
             </section>
-
         </div>
-        <section></section>
-        <section></section>
+            <section class=" wireframe">
+                <h2>Wireframes:</h2>
+                <img src="" alt="Home page wireframe">
+                <img src="" alt="Second page wireframe">
+            </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>To view the home page wireframe, click <a>here</a> and to view the calculator page wireframe, click <a>here</a></p>
+        <p>&copy; <span id="currentyear">2025</span> &nbsp;|&nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp;|&nbsp;  Nigeria.</p>
+    </footer>
 </body>
 </html>
