Developed wirframes for wide view and mobile view.

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -17,7 +17,7 @@
         <span>Unicon Aluminum Site Plan</span>
     </header>
     <main>
-            <img src="" class="logo" alt="Company Logo">
+            <img src="images/unicon-aluminum-company-logo.webp" width="70px" alt="Company Logo">
             <h1 id="heading">Site Name: UNICON ALUMINUM COMPANY</h1>
             <p class="domain">Domain name: <span class="nomain-name">https://engrodus.github.io/wdd131/week06/unicon-aluminum-company.html</span></p>
         <div>
@@ -105,8 +105,8 @@
         </div>
             <section class=" wireframe">
                 <h2>Wireframes:</h2>
-                <img src="" alt="Home page wireframe">
-                <img src="" alt="Second page wireframe">
+                <img src="images/wide-view.webp" alt="wireframe photo for wide view">
+                <img src="images/mobile-view.webp" alt="wireframe photo for mobile view">
             </section>
     </main>
     <footer>
