Created siteplan.css file in the styles folder within the project directory.

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -17,7 +17,7 @@
         <span>Unicon Aluminum Site Plan</span>
     </header>
     <main>
-            <img src="images/unicon-aluminum-company-logo.webp" width="70px" alt="Company Logo">
+            <img src="images/unicon-aluminum-company-logo.webp" alt="Company Logo">
             <h1 id="heading">Site Name: UNICON ALUMINUM COMPANY</h1>
             <p class="domain">Domain name: <span class="nomain-name">https://engrodus.github.io/wdd131/week06/unicon-aluminum-company.html</span></p>
         <div>
