Createdcss psuedo root color variables in the siteplan.css file..

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -14,11 +14,13 @@
 </head>
 <body>
     <header>
-        <span>Unicon Aluminum Site Plan</span>
+        <span>Unicon Aluminum Company Site Plan</span>
     </header>
     <main>
-            <img src="images/unicon-aluminum-company-logo.webp" alt="Company Logo">
+            
             <h1 id="heading">Site Name: UNICON ALUMINUM COMPANY</h1>
+            <h2>Company Logo:</h2>
+            <img src="images/unicon-aluminum-company-logo.webp" alt="Company Logo">
             <p class="domain">Domain name: <span class="nomain-name">https://engrodus.github.io/wdd131/week06/unicon-aluminum-company.html</span></p>
         <div>
             <section>
