Completely developed the siteplan.css

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -14,15 +14,16 @@
 </head>
 <body>
     <header>
-        <span>Unicon Aluminum Company Site Plan</span>
+        <span class="hs">Unicon Aluminum Company Site Plan</span>
     </header>
-    <main>
-            
-            <h1 id="heading">Site Name: UNICON ALUMINUM COMPANY</h1>
+    <main class="main-grid">  
+        <h1 id="heading">Site Name: UNICON ALUMINUM COMPANY</h1>
+        <div class="logo-text">
             <h2>Company Logo:</h2>
-            <img src="images/unicon-aluminum-company-logo.webp" alt="Company Logo">
-            <p class="domain">Domain name: <span class="nomain-name">https://engrodus.github.io/wdd131/week06/unicon-aluminum-company.html</span></p>
-        <div>
+            <img src="images/unicon-aluminum-company-logo.webp" alt="Company Logo" class="logo">
+            <p class="domain">Domain name: <span class="domain-name">https://engrodus.github.io/wdd131/week06/unicon-aluminum-company.html</span></p>
+        </div>
+        <div class="reasons">
             <section>
                 <h2>Site Purpose:</h2>
                 <p>This site provide detail analysis on aluminum roof material calculations. The app ask you questions about
@@ -49,7 +50,7 @@
                 </ul>
             </section>
         </div>
-        <div>
+        <div class="color-typography">
             <section>
                 <h2>Color Schema:</h2>
                 <ol>
@@ -105,14 +106,20 @@
                 </ul>
             </section>
         </div>
-            <section class=" wireframe">
-                <h2>Wireframes:</h2>
-                <img src="images/wide-view.webp" alt="wireframe photo for wide view">
-                <img src="images/mobile-view.webp" alt="wireframe photo for mobile view">
-            </section>
+        <section class=" wireframe">
+            <h2>Wireframes</h2>
+            <div class="wide-view">
+                <h3>Wide display:</h3>
+                <img src="images/wide-view.webp" alt="wireframe photo for wide view" class="wider">
+            </div>
+            <div class="small-view">
+                <h3>mobile display:</h3>
+                <img src="images/mobile-view.webp" alt="wireframe photo for mobile view" class="mobile">
+            </div>
+        </section>
     </main>
     <footer>
-        <p>To view the home page wireframe, click <a>here</a> and to view the calculator page wireframe, click <a>here</a></p>
+        
         <p>&copy; <span id="currentyear">2025</span> &nbsp;|&nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp;|&nbsp;  Nigeria.</p>
     </footer>
 </body>
