Removed span from label and also removed require attributr from section.

--- a/week05/form.html
+++ b/week05/form.html
@@ -29,12 +29,12 @@
             
             <div class="relative">
                 <p class="rating-p">Overall Rating <strong class="asterisk">*</strong></p>
-                <section class="rate-section" required>
-                    <label for="rating1" class="rate-icon"><span>&star;</span><input id="rating1" type="radio" name="rating" value="1-star"></label>
-                    <label for="rating2" class="rate-icon"><span>&star;&star;</span><input id="rating2" type="radio" name="rating" value="2-star" ></label>
-                    <label for="rating3" class="rate-icon"><span>&star;&star;&star;</span><input id="rating3" type="radio" name="rating" value="3-star"></label>
-                    <label for="rating4" class="rate-icon"><span>&star;&star;&star;&star;</span><input id="rating4" type="radio" name="rating" value="4-star"></label>
-                    <label for="rating5" class="rate-icon"><spann>&star;&star;&star;&star;&star;</spann><input id="rating5" type="radio" name="rating" value="5-star"></label>
+                <section class="rate-section">
+                    <label for="rating1" class="rate-icon"><strong>&star;</strong><input id="rating1" type="radio" name="rating" value="1-star" required></label>
+                    <label for="rating2" class="rate-icon"><strong>&star;&star;</strong><input id="rating2" type="radio" name="rating" value="2-star"  required></label>
+                    <label for="rating3" class="rate-icon"><strong>&star;&star;&star;</strong><input id="rating3" type="radio" name="rating" value="3-star" required></label>
+                    <label for="rating4" class="rate-icon"><strong>&star;&star;&star;&star;</strong><input id="rating4" type="radio" name="rating" value="4-star" required></label>
+                    <label for="rating5" class="rate-icon"><strong>&star;&star;&star;&star;&star;</strong><input id="rating5" type="radio" name="rating" value="5-star" required></label>
                 </section>
             </div>
 
