--- a/week06/unicon-aluminum-company.html
+++ b/week06/unicon-aluminum-company.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Unicon Aluminum Company, Aluminum roof materials calculator, Roof samples, Gable/pitched roof calculator, hipped roof calculator, flat roof calculator, sophisticated roof design calculator">
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor, EngrOdus, Oducity">
+    <link rel="stylesheet" href="styles/unicon-alu-co.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Sofia:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <script src="scripts/unicon-alu-co.js" defer></script>
     <title>Unicon Aluminum Company</title>
 </head>
 <body>
