--- a/week06/unicon-aluminum-company.html
+++ b/week06/unicon-aluminum-company.html
@@ -11,9 +11,35 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Sofia:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <script src="scripts/unicon-alu-co.js" defer></script>
+    <script src="../scripts/getdates.js" defer></script>
     <title>Unicon Aluminum Company</title>
 </head>
 <body>
-    
+    <header>
+        <span class="company-name"><img src="images/unicon-aluminum-company-logo.webp" alt="Unicon aluminum company logo." class="company-logo">Unicon Aluminum Company</span>
+        <nav class="nav-bar">
+            <a href="unicon-aluminum-company.html" class="home-page">Home</a>
+            <a href="#" class="calculator-page">Calculator</a>
+            <a href="#" class="about-us-page">Cantact Us</a>
+        </nav>
+    </header>
+    <main class="main">
+        <img src="images/men-at-work.webp" alt="Photo of Unicon aluminum company staffs at work.">
+        <h1>Aluminum Roofs</h1>
+        <section>
+            <h2>Our pride</h2>
+            <p>
+                Im Unicon aluminum company, we pride in high quality roof materials, durable installation and timely delivery.
+                Nigerian company founded 2007, we've horn our skills haven't submounted numerous challenges in the aluminum roof industry.
+            </p>
+        </section>
+
+
+
+    </main>
+    <footer>
+        <p>&copy; <span id="currentyear"></span> &nbsp; 🎏 &nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp; 🎏 &nbsp;  Nigeria.</p>
+        <p id="lastModified"></p>
+    </footer>
 </body>
 </html>
