--- a/week06/unicon-aluminum-company.html
+++ b/week06/unicon-aluminum-company.html
@@ -5,31 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Unicon Aluminum Company, Aluminum roof materials calculator, Roof samples, Gable/pitched roof calculator, hipped roof calculator, flat roof calculator, sophisticated roof design calculator">
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor, EngrOdus, Oducity">
-    <link rel="stylesheet" href="styles/unicon-alu-co.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Sofia:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <script src="scripts/unicon-alu-co.js" defer></script>
     <script src="../scripts/getdates.js" defer></script>
+    <link rel="stylesheet" href="styles/unicon-alu-co.css">
     <title>Unicon Aluminum Company</title>
 </head>
 <body>
     <header>
-        <span class="company-name"><img src="images/unicon-aluminum-company-logo.webp" alt="Unicon aluminum company logo." class="company-logo">Unicon Aluminum Company</span>
+        <div class="company-div">
+            <img src="images/unicon-aluminum-company-logo.webp" alt="Unicon aluminum company logo." class="company-logo">
+            <h1 class="company-name">Unicon Aluminum Company</h1>
+        </div>
         <nav class="nav-bar">
-            <a href="unicon-aluminum-company.html" class="home-page">Home</a>
-            <a href="#" class="calculator-page">Calculator</a>
-            <a href="#" class="about-us-page">Cantact Us</a>
+            <a href="unicon-aluminum-company.html" class="home-button">Home</a>
+            <a href="#" class="calculator-button">Calculator</a>
+            <a href="#" class="about-us-button">Cantact Us</a>
         </nav>
     </header>
     <main class="main">
         <img src="images/men-at-work.webp" alt="Photo of Unicon aluminum company staffs at work.">
-        <h1>Aluminum Roofs</h1>
+        <h2>Aluminum Roofs</h2>
         <section>
             <h2>Our pride</h2>
             <p>
-                Im Unicon aluminum company, we pride in high quality roof materials, durable installation and timely delivery.
+                In Unicon aluminum company, we pride in high quality roof materials, durable installation and timely delivery.
                 Nigerian company founded 2007, we've horn our skills haven't submounted numerous challenges in the aluminum roof industry.
             </p>
         </section>
