Created aluminum-calculator.html, aluminum-calculator.js files.

--- a/week06/aluminum-calculator.html
+++ b/week06/aluminum-calculator.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Sofia:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <script src="scripts/unicon-alu-co.js" defer></script>
+    <script src="scripts/aluminum-calculator.js" defer></script>
     <script src="../scripts/getdates.js" defer></script>
     <link rel="stylesheet" href="styles/unicon-alu-co.css">
     <title>Unicon Aluminum Company</title>
@@ -21,21 +21,13 @@
             <h1 class="company-name">Unicon Aluminum Company</h1>
         </div>
         <nav class="nav-bar">
-            <a class="home-button" id="home-button">Home</a>
-            <a class="calculator-button" id="calculator-button">Calculator</a>
+            <a href="unicon-aluminum-company.html" class="home-button" id="home-button">Home</a>
+            <a href="aluminum-calculator.html" class="calculator-button" id="calculator-button">Calculator</a>
             <a  class="about-us-button" id="about-us-button">Cantact Us</a>
         </nav>
     </header>
     <main class="main">
-        <img src="images/men-at-work.webp" alt="Photo of Unicon aluminum company staffs at work.">
-        <h2>Aluminum Roofs</h2>
-        <section>
-            <h2>Our pride</h2>
-            <p>
-                In Unicon aluminum company, we pride in high quality roof materials, durable installation and timely delivery.
-                Nigerian company founded 2007, we've horn our skills haven't submounted numerous challenges in the aluminum roof industry.
-            </p>
-        </section>
+        
 
 
 
