Linked aluminum-calculator.html to unicon-aluminum-company.html.

--- a/week06/aluminum-calculator.html
+++ b/week06/aluminum-calculator.html
@@ -26,9 +26,9 @@
             <a  class="about-us-button" id="about-us-button">Cantact Us</a>
         </nav>
     </header>
-    <main class="main">
+    <main class="main calc-main">
 
-        <section class="cal-section">
+        <section class="calculator">
             <h2>Aluminum Roof Calculator</h2>
 
             <p>Please fill in the following fields in <strong> meters</strong> to calculate your aluminum roof materials.
