--- a/week06/unicon-aluminum-company.html
+++ b/week06/unicon-aluminum-company.html
@@ -22,7 +22,7 @@
         </div>
         <nav class="nav-bar">
             <a class="home-button" id="home-button">Home</a>
-            <a class="calculator-button" id="calculator-button">Calculator</a>
+            <a href="aluminum-calculator.html" class="calculator-button" id="calculator-button">Calculator</a>
             <a  class="about-us-button" id="about-us-button">Cantact Us</a>
         </nav>
     </header>
