Developed the aluminum-calculator.css file.

--- a/week06/aluminum-calculator.html
+++ b/week06/aluminum-calculator.html
@@ -92,7 +92,7 @@
 
             
                 <label for="bottom-trimmers">Bottom-Trimmers(total length):
-                    <input type="textr" name="bottom-trimmers" value="Length width.">
+                    <input type="text" name="bottom-trimmers" value="Length width.">
                 </label>
                 <label for="bottom-trimmers-width">Bottom-Trimmers(width):
                     <input type="text" name="bottom-trimmers-width" value="Width in meters.">
@@ -104,7 +104,7 @@
                     <input type="text" name="wall-trimmers" value="Length width.">
                 </label>
                 <label for="wall-trimmers-width">Wall-Trimmers(width):
-                    <input type="textr" name="wall-trimmers-width" value="Width in meters.">
+                    <input type="text" name="wall-trimmers-width" value="Width in meters.">
                 </label>
             
 
@@ -130,7 +130,7 @@
         </section>
 
     </main>
-    <footer>
+    <footer class="calc-footer">
         <p>&copy; <span id="currentyear"></span> &nbsp; 🎏 &nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp; 🎏 &nbsp;  Nigeria.</p>
         <p id="lastModified"></p>
     </footer>
