Completed css design for the aluminum-calculator.html.

--- a/week06/aluminum-calculator.html
+++ b/week06/aluminum-calculator.html
@@ -117,7 +117,9 @@
                 </label>
 
             </fieldset>
-            <input type="button" value="Calculate My Roof">
+            <label for="button">
+                <input type="button" name="button" value="Calculate My Roof">
+            </label>
 
         </section>
 
