--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="BYUI-WDD131 - Web Form">
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
-    <link rel="stylesheet" href="styles/form.css">
+    <link rel="stylesheet" href="week05/styles/form.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
