--- a/form.html
+++ b/form.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Sofia&display=swap" rel="stylesheet">
-    <script src="scripts/form.js" defer></script>
-    <title>Document</title>
+    <script src="week05/scripts/form.js" defer></script>
+    <title>Product Review Form</title>
 </head>
 <body>
     <header><h1>Product Review</h1></header>
