--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="BYUI-WDD131 - Web Form">
+    <meta name="description" content="BYUI-WDD131 - Product review form, Web Form">
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
     <link rel="stylesheet" href="week05/styles/form.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
