--- a/form.html
+++ b/form.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="BYUI-WDD131 - Product review form, Web Form">
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
-    <link rel="stylesheet" href="week05/styles/form.css">
+    <link rel="stylesheet" href="styles/form.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Sofia&display=swap" rel="stylesheet">
-    <script src="week05/scripts/form.js" defer></script>
+    <script src="scripts/form.js" defer></script>
     <title>Product Review Form</title>
 </head>
 <body>
