Added section element to aluminum-calculator.html and developed function CalculateTrimmers() in aluminum-calculator.js files.

--- a/week06/aluminum-calculator.html
+++ b/week06/aluminum-calculator.html
@@ -122,6 +122,10 @@
 
         </section>
 
+        <section class="result-box">
+
+        </section>
+
         <section class="user-guide">
             <h2>User Guide</h2>
             <p>
