Added common header to the form.

--- a/week05/unicon-form.html
+++ b/week05/unicon-form.html
@@ -13,8 +13,20 @@
     <title>Unicon Aluminum Roofing Sheet Review Form</title>
 </head>
 <body>
-    <header><h1>Al Roof Sheet Review</h1></header>
+    <header>
+        <div class="company-div">
+            <img src="images/unicon-aluminum-company-logo1.webp" alt="Unicon aluminum company logo." class="company-logo">
+            <h1 class="company-name">Unicon Aluminum Company</h1>
+        </div>
+        <nav class="nav-bar">
+            <a href="unicon-aluminum-company.html" class="home-button" id="home-button">Home</a>
+            <a href="aluminum-calculator.html" class="calculator-button" id="calculator-button">Calculator</a>
+            <a  class="about-us-button" id="about-us-button">Cantact Us</a>
+        </nav>
+    </header>
+    
     <main>
+        <h1>Al Roof Sheet Review</h1>
         <form method="get" action="review.html" class="web-form">
 
             <div>
