--- a/unicon-form.html
+++ b/unicon-form.html
@@ -21,7 +21,7 @@
         <nav class="nav-bar">
             <a href="unicon-aluminum-company.html" class="home-button" id="home-button">Home</a>
             <a href="aluminum-calculator.html" class="calculator-button" id="calculator-button">Calculator</a>
-            <a  class="about-us-button" id="about-us-button">Cantact Us</a>
+            <a href="unicon-form.html" class="about-us-button" id="about-us-button">Cantact Us</a>
         </nav>
     </header>
     
