--- a/unicon-aluminum-company.html
+++ b/unicon-aluminum-company.html
@@ -23,7 +23,7 @@
         <nav class="nav-bar">
             <a class="home-button" id="home-button">Home</a>
             <a href="aluminum-calculator.html" class="calculator-button" id="calculator-button">Calculator</a>
-            <a  class="about-us-button" id="about-us-button">Cantact Us</a>
+            <a href="unicon-form.html" class="about-us-button" id="about-us-button">Cantact Us</a>
         </nav>
     </header>
     <main class="main">
