Added background color to the body elelment  of the the form.

--- a/unicon-form.html
+++ b/unicon-form.html
@@ -86,7 +86,7 @@
 
         </form>
     </main>
-    <footer>
+    <footer class="form-footer">
         <p>&copy; <span id="currentyear"></span> &nbsp; 🎏 &nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp; 🎏 &nbsp;  Nigeria.</p>
         <p id="lastModified"></p>
     </footer>
