Created p elements for last visit in unicon home and calculator pages.

--- a/aluminum-calculator.html
+++ b/aluminum-calculator.html
@@ -137,6 +137,7 @@
 
     </main>
     <footer class="calc-footer">
+        <p id="last-visit"></p>
         <p>&copy; <span id="currentyear"></span> &nbsp; 🎏 &nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp; 🎏 &nbsp;  Nigeria.</p>
         <p id="lastModified"></p>
     </footer>
