--- a/unicon-aluminum-company.html
+++ b/unicon-aluminum-company.html
@@ -41,6 +41,7 @@
 
     </main>
     <footer>
+        <p id="last-visit"></p>
         <p>&copy; <span id="currentyear"></span> &nbsp; 🎏 &nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp; 🎏 &nbsp;  Nigeria.</p>
         <p id="lastModified"></p>
     </footer>
