Developed last-visit.js file.

--- a/aluminum-calculator.html
+++ b/aluminum-calculator.html
@@ -137,7 +137,7 @@
 
     </main>
     <footer class="calc-footer">
-        <p id="last-visit"></p>
+        <p id="last-box"><span class="visit-text">Number of times You habe visited us:</span> <span id="visit-times"></span> </p>
         <p>&copy; <span id="currentyear"></span> &nbsp; 🎏 &nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp; 🎏 &nbsp;  Nigeria.</p>
         <p id="lastModified"></p>
     </footer>
