Changed a variable name in last-visit.js file.

--- a/unicon-form.html
+++ b/unicon-form.html
@@ -88,7 +88,7 @@
         </form>
     </main>
     <footer class="form-footer">
-        <p id="last-box"><span class="visit-text">Number of times You habe visited us:</span> <span id="visit-times"></span> </p>
+        <p id="last-box"><span id="visit-text"></span> <span id="visit-times"></span> </p>
         <p>&copy; <span id="currentyear"></span> &nbsp; 🎏 &nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp; 🎏 &nbsp;  Nigeria.</p>
         <p id="lastModified"></p>
     </footer>
