Developed the unicon-alu-co.css file for mobile responsiveness.

--- a/unicon-aluminum-company.html
+++ b/unicon-aluminum-company.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/unicon-alu-co.css">
     <title>Unicon Aluminum Company</title>
 </head>
-<body>
+<body class="home-body">
     <header>
         <div class="company-div">
             <img src="images/unicon-aluminum-company-logo1.webp" alt="Unicon aluminum company logo." class="company-logo">
