Added image for medium and small view.

--- a/unicon-aluminum-company.html
+++ b/unicon-aluminum-company.html
@@ -28,7 +28,12 @@
         </nav>
     </header>
     <main class="main">
-        <img src="images/men-at-work.webp" alt="Photo of Unicon aluminum company staffs at work.">
+        <picture>
+            <source srcset="images/men-at-work.webp" media="(min-width:1300)">
+            <source srcset="" media="(min-width:1300)">
+            <img src="" alt="Photo of Unicon aluminum company staffs at work.">
+        </picture>
+        
         <h2>Aluminum Roofs</h2>
         <section>
             <h2>Our pride</h2>
