--- a/unicon-aluminum-company.html
+++ b/unicon-aluminum-company.html
@@ -30,7 +30,7 @@
     <main class="main">
         <picture>
             <source srcset="images/men-at-work.webp" media="(min-width:1300)">
-            <source srcset="" media="(min-width:1300)">
+            <source srcset="images/men-at-work" media="(min-width:800)">
             <img src="" alt="Photo of Unicon aluminum company staffs at work.">
         </picture>
         
