Changed name for images.

--- a/unicon-aluminum-company.html
+++ b/unicon-aluminum-company.html
@@ -29,9 +29,9 @@
     </header>
     <main class="main">
         <picture>
-            <source srcset="images/men-at-work.webp" media="(min-width:1300)">
-            <source srcset="images/men-at-work" media="(min-width:800)">
-            <img src="" alt="Photo of Unicon aluminum company staffs at work.">
+            <source srcset="images/men-at-" media="(min-width:1300)">
+            <source srcset="images/men-at-work-660x344.webp" media="(min-width:800)">
+            <img src="images/men-at-work-420x219.webp" alt="Photo of Unicon aluminum company staffs at work.">
         </picture>
         
         <h2>Aluminum Roofs</h2>
