Change the unicon-alu-co.js to create just one roof-box section.

--- a/unicon-aluminum-company.html
+++ b/unicon-aluminum-company.html
@@ -28,11 +28,13 @@
         </nav>
     </header>
     <main class="main">
-        <picture>
-            <source srcset="images/men-at-" media="(min-width:1300)">
-            <source srcset="images/men-at-work-660x344.webp" media="(min-width:800)">
-            <img src="images/men-at-work-420x219.webp" alt="Photo of Unicon aluminum company staffs at work.">
-        </picture>
+        <div class="hero">
+            <picture>
+                <source srcset="images/men-at-work.webp" media="(min-width:800)">
+                <source srcset="images/men-at-work-medium.webp" media="(min-width:600)">
+                <img src="images/men-at-work-small.webp" alt="Photo of Unicon aluminum company staffs at work." width="420" height="219">
+            </picture>
+        </div>
         
         <h2>Aluminum Roofs</h2>
         <section>
