--- a/form.html
+++ b/form.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
     <script src="scripts/form.js" defer></script>
+    <script src="scripts/form-last-visit.js" defer></script>
     <title>Product Review Form</title>
 </head>
 <body>
@@ -74,6 +75,7 @@
         </form>
     </main>
     <footer>
+        <p id="last-box"><span id="visit-text"></span> <span id="visit-times"></span> </p>
         <p>&copy; <span id="currentyear"></span> &nbsp; 👍 &nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp; 👍 &nbsp;  Nigeria.</p>
         <p id="lastModified"></p>
     </footer>
