removed unwanted code.

--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
     <script src="scripts/form-last-visit.js" defer></script>
     <title>Product Review Form</title>
 </head>
-<body class="normal-body">
+<body>
     <header class="header"><h1>Product Review</h1></header>
     <main>
         <form method="get" action="review.html" class="web-form">
