Added lazy"loadong" to the images.

--- a/unicon-aluminum-company.html
+++ b/unicon-aluminum-company.html
@@ -18,7 +18,7 @@
 <body class="home-body">
     <header>
         <div class="company-div">
-            <img src="images/unicon-aluminum-company-logo1.webp" alt="Unicon aluminum company logo." class="company-logo">
+            <img src="images/unicon-aluminum-company-logo1.webp" alt="Unicon aluminum company logo." class="company-logo" loading="lazy">
             <h1 class="company-name">Unicon Aluminum Company</h1>
         </div>
         <nav class="nav-bar">
@@ -32,7 +32,7 @@
             <picture>
                 <source srcset="images/men-at-work.webp" media="(min-width:800)">
                 <source srcset="images/men-at-work-medium.webp" media="(min-width:600)">
-                <img src="images/men-at-work-small.webp" alt="Photo of Unicon aluminum company staffs at work." width="420" height="219">
+                <img src="images/men-at-work-small.webp" alt="Photo of Unicon aluminum company staffs at work." width="420" height="219" loading="lazy">
             </picture>
         </div>
         
